--- a/cci_dt.yml
+++ b/cci_dt.yml
@@ -12,3 +12,6 @@ dependencies:
   - nb_conda=2.2.1
   - r-devtools=2.3.2
   - r-irkernel=1.1.1
+  - networkx=2.5
+  - pandas=1.1.5
+  - python>=3.7,<=3.9
