--- a/cci_dt.yml
+++ b/cci_dt.yml
@@ -4,14 +4,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - bioconductor-biobase=2.50.0
-  - bioconductor-s4vectors=0.28.0
-  - bioconductor-summarizedexperiment=1.20.0
-  - ipykernel=5.3.4
-  - jupyter=1.0.0
-  - nb_conda=2.2.1
-  - r-devtools=2.3.2
-  - r-irkernel=1.1.1
+  - python>=3.7,<=4.0
   - networkx=2.5
-  - pandas=1.1.5
-  - python>=3.7,<=3.9
+  - pandas=1.2.2
+  - tensorly=0.5.1
+  - r-docopt=0.7.1
