--- a/c2c_sim.yml
+++ b/c2c_sim.yml
@@ -8,6 +8,7 @@ dependencies:
   - networkx=2.5
   - pandas=1.2.2
   - tensorly=0.5.1
+  - python-igraph=0.8.3
   - r-docopt=0.7.1
 # for cell2cell package----------------------------
   - scikit-learn=0.24.1
