--- a/c2c_sim.yml
+++ b/c2c_sim.yml
@@ -3,13 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-#   - python>=3.7,<=4.0
   - networkx=2.5
-#   - pandas=1.2.2
-#   - tensorly=0.5.1
   - python-igraph=0.8.3
+  - r-base=4.0.3
   - r-docopt=0.7.1
-# # for cell2cell package----------------------------
-#   - scikit-learn=0.24.1
-#   - matplotlib=3.3.4
-#   - seaborn=0.11.1
+  - cell2cell #=0.4.0 for version that "explore" analysis was done with 
