--- a/c2c_sim.yml
+++ b/c2c_sim.yml
@@ -4,7 +4,9 @@ channels:
   - defaults
 dependencies:
   - networkx=2.5
+  - pip=21.0.1
   - python-igraph=0.8.3
   - r-base=4.0.3
   - r-docopt=0.7.1
-  - cell2cell #=0.4.0 for version that "explore" analysis was done with 
+  - pip:
+      - cell2cell #=0.4.0 for version that "explore" analysis was done with 
